--- a/src/App.css
+++ b/src/App.css
@@ -9,18 +9,24 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: white;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: #03131B;
 }
 
 .App-link {
   color: #61dafb;
+}
+
+.cardborder {
+  border: 6px solid #DEE1E3;
+  padding: 10px;
+  margin: 20px;
 }
 
 @keyframes App-logo-spin {
