--- a/src/App.css
+++ b/src/App.css
@@ -25,39 +25,40 @@
 }
 
 .cardborder {
+  display: block;
+  height: 160px;
   background: white;
   box-shadow: 3px 4px 4px 3px #DEE1E3;
-  padding: 10px;
   margin: 40px;
-
+  width: 90%;
 }
 
 .navbar {
   display: block;
   position: fixed;
   width: 100%;
-  height: 80px;
   top: 0;
   background-image: linear-gradient(#04CF94, #73FAD5);
   text-align: center;
   font-family: Georgia;
   font-weight: bold;
+  z-index: 1;
+  padding: 30px
 }
 
 .title {
-  padding: 15px;
-  font-size: 40px;
-  display: inline-block;
+  font-size: 1em;
+  display: block;
   float: left;
-  height: 100%;
+  width: 50%;
+
 }
 
 .navbar a {
-  display: inline-block;
-  font-size: 18px;
-  float: right;
-  padding: 25px;
-  height: 100%;
+  font-size: 0.7em;
+  display: block;
+  float: left;
+  width: 50%;
 }
 
 a {
@@ -69,16 +70,35 @@ a:hover {
 }
 
 .commentbox {
-  display: inline-block;
-  height: 100%;
+  display: block;
+  position: relative;
   width: 30%;
-  float: right;
+  float: left;
+  margin: auto;
+  height: 100%;
+}
+
+.comments {
+  line-height: 40px;
+  margin-top: 25%;
+  font-size: 1em;
 }
 
 .leftbox {
   display: block;
   width: 70%;
+  float: left;
+  height: 100%;
+  margin: auto;
+  padding-top: 10px;
+}
 
+.itemtitle, .points, .user, .time_ago {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 90%;
+  font-size: 1em;
 }
 
 @keyframes App-logo-spin {
