--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,9 @@
 .App {
   text-align: center;
   margin-top: 80px;
+  color: #4A5050;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
 
 .App-header {
   background-color: #F0F5F9;
@@ -26,11 +22,13 @@
 
 .cardborder {
   display: block;
-  height: 160px;
+  height: 200px;
   background: white;
   box-shadow: 3px 4px 4px 3px #DEE1E3;
-  margin: 40px;
-  width: 90%;
+  margin: 30px auto;
+  width: 60%;
+  padding: 15px;
+  overflow-y: auto;
 }
 
 .navbar {
@@ -51,7 +49,7 @@
   display: block;
   float: left;
   width: 50%;
-
+  color: #4A5050;
 }
 
 .navbar a {
@@ -72,33 +70,76 @@ a:hover {
 .commentbox {
   display: block;
   position: relative;
-  width: 30%;
+  width: 20%;
   float: left;
   margin: auto;
-  height: 100%;
 }
 
 .comments {
-  line-height: 40px;
-  margin-top: 25%;
-  font-size: 1em;
+  margin-top: 50px;
+  font-size: .7em;
+  margin-bottom: 25%;
+  margin-left: 10%;
+  margin-right: 10%;
+  color: #4A5050;
 }
 
 .leftbox {
   display: block;
-  width: 70%;
+  position: relative;
+  width: 80%;
   float: left;
-  height: 100%;
-  margin: auto;
-  padding-top: 10px;
 }
 
-.itemtitle, .points, .user, .time_ago {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 90%;
-  font-size: 1em;
+.itemtitle, .points, .user_time, .url {
+  margin-left: 5%;
+  margin-right: 5%;
+
+  width: 80%;
+  color: #5C6464;
+  text-align: left;
+}
+
+.itemtitle {
+  font-weight: bold;
+  font-size: 100%;
+  margin-top: 2%;
+}
+
+.user_time {
+  font-size: .9em;
+}
+
+.url {
+  padding: 10px 0;
+  font-size: 18px;
+}
+
+.user {
+  font-weight: bold;
+}
+
+.points {
+  display: inline-block;
+  width: auto;
+  float: left;
+  border-radius: 20px;
+  font-size: .8em;
+  padding: 12px;
+  background-color: rgb(226 116 81);
+  color: white;
+  font-weight: bold;
+  bottom: 0;
+}
+
+input {
+  margin-top: 20px;
+  width: 300px;
+  height: 30px;
+}
+
+.searchtitle {
+  font-size: 20px;
 }
 
 @keyframes App-logo-spin {
