--- a/src/App.css
+++ b/src/App.css
@@ -36,6 +36,7 @@
   position: fixed;
   width: 100%;
   top: 0;
+  left: 0;
   background-image: linear-gradient(#04CF94, #73FAD5);
   text-align: center;
   font-family: Georgia;
